@@ -1,3 +1,6 @@
+13-Mar-2011 Fix typo in DependencyNodeCollection.
+            Remove now unused MakeFileData.Included property.
+
 13-Mar-2011 MakeFile update
             MakeFileBuilder now allows adding multiple rules to a MakeFile.
             Added classes MakeFileVariableDictionary and MakeFileTargetDictionary to store intermediate and output Make variables and targets, mapped by type.
